# liblinkedlist

./: CMakeLists.txt  Makefile  README.md
include/: .linked_list.h.swp  linked_list.h
src/: .linked_list.c.swp  .test.c.swp  linked_list.c  test.c
